tests/ui/fn/bad-main.rs
fn main(x: isize) { } //~ ERROR: `main` function has wrong type [E0580]

// ferrocene-annotations: fls_8jb3sjqamdpu
// Program Entry Point
